--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,10 +18,17 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
+    <style>
+      * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box !important;
+      }
+    </style>
     <title>JIRA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="background-color: aliceblue"></div>
   </body>
 </html>
