--- a/client/public/index.html
+++ b/client/public/index.html
@@ -18,17 +18,25 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
 
+    <!-- bootstrap css  -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+
     <style>
       * {
         margin: 0;
         padding: 0;
-        box-sizing: border-box !important;
+        box-sizing: border-box;
       }
     </style>
     <title>JIRA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root" style="background-color: aliceblue"></div>
+    <div id="root" class="d-flex flex-column"></div>
   </body>
 </html>
