--- a/client/public/index.html
+++ b/client/public/index.html
@@ -49,6 +49,17 @@
         -webkit-box-shadow: 0 0 0 30px #f2efc5a3 inset !important;
         background-color: #f2efc5a3 !important;
       }
+
+      /*react-quill toolbar css */
+      .ql-toolbar button {
+        margin-inline: 2px !important;
+      }
+
+      .ql-toolbar button:hover,
+      button.ql-active {
+        background-color: #accdf4 !important;
+        border-radius: 5px;
+      }
     </style>
     <title>JIRA</title>
   </head>
